--- a/macro/package.json
+++ b/macro/package.json
@@ -11,7 +11,8 @@
 	"license": "ISC",
 	"dependencies": {
 		"fs.promisify": "git+ssh://git@github.com:anzerr/fs.promisify.git",
-		"cli.util": "git+ssh://git@github.com:anzerr/cli.util.git"
+		"cli.util": "git+ssh://git@github.com:anzerr/cli.util.git",
+		"json.to.yaml": "git+ssh://git@github.com:anzerr/json.to.yaml.git"
 	},
 	"devDependencies": {
 		"eslint": "^5.10.0",
