--- a/macro/package.json
+++ b/macro/package.json
@@ -7,12 +7,15 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
-	"author": "",
-	"license": "ISC",
+	"author": "anzerr",
+	"license": "MIT",
 	"dependencies": {
-		"fs.promisify": "git+ssh://git@github.com:anzerr/fs.promisify.git",
 		"cli.util": "git+ssh://git@github.com:anzerr/cli.util.git",
-		"json.to.yaml": "git+ssh://git@github.com:anzerr/json.to.yaml.git"
+		"fs.promisify": "git+ssh://git@github.com:anzerr/fs.promisify.git",
+		"json.to.yaml": "git+ssh://git@github.com/anzerr/json.to.yaml.git",
+		"slowloris": "git+ssh://git@github.com/anzerr/slowloris.tool.git",
+		"static.http": "git+ssh://git@github.com/anzerr/static.http.git",
+		"sync.folder": "git+ssh://git@github.com/anzerr/sync.folder.git"
 	},
 	"devDependencies": {
 		"eslint": "^5.10.0",
@@ -23,5 +26,17 @@
 	},
 	"bin": {
 		"azr": "./index.js"
-	}
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/anzerr/azr.cli.git"
+	},
+	"engines": {
+		"node": ">= 0.10.0"
+	},
+	"types": "index.d.ts",
+	"bugs": {
+		"url": "https://github.com/anzerr/azr.cli/issues"
+	},
+	"homepage": "https://github.com/anzerr/azr.cli#readme"
 }
